SERVER-71620 Coverity analysis defect 134237: Using a moved object